--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <a href="#main" class="skip-to-content">Skip to main content</a>
 
     <!-- Progress scroll bar -->
-    <div class="scroll-progress" id="scrollProgress"></div>
+    <div class="progress-bar" id="progressBar" aria-hidden="true"></div>
 
     <!-- Navigation Menu -->
     <header class="header" role="banner">
@@ -106,7 +106,8 @@
             <div class="container">
                 <div class="hero-content" data-aos="fade-up" data-aos-delay="200">
                     <h1 class="hero-title">I build modern websites that are<br>
-                        <span class="typing-text" id="typingText"></span>
+                        <span class="typing-text" id="typingText" data-typewriter aria-live="polite"
+                            aria-atomic="true"></span>
                     </h1>
                     <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="400">
                         Freelance web developer specializing in modern, accessible, and performance-optimized websites
@@ -454,7 +455,7 @@
         </section>
 
         <!-- ===== Portfolio Section ===== -->
-        <section id="portfolio" class="section">
+        <section id="portfolio" class="portfolio">
             <div class="container">
                 <div class="section-header" data-aos="fade-up">
                     <h2 class="section-title">
@@ -723,14 +724,14 @@
                         <div class="footer-contact-items">
                             <p>
                                 <i class="ri-mail-line"></i>
-                                <a href="mailto:brandon@brandontorres.dev">
-                                    brandon@brandontorres.dev
+                                <a href="mailto:brandon.agdesign@gmail.com">
+                                    brandon.agdesign@gmail.com
                                 </a>
                             </p>
                             <p>
                                 <i class="ri-phone-line"></i>
                                 <a href="tel:+15551234567">
-                                    (555) 123-4567
+                                    501.213.7772
                                 </a>
                             </p>
                             <p>
