--- a/index.html
+++ b/index.html
@@ -121,9 +121,8 @@
                         </a>
                     </div>
                     <!-- Scroll Down Indicator -->
-                    <a href="#about" class="scroll-indicator" aria-label="Scroll down to learn more" data-aos="fade-up"
-                        data-aos-delay="800">
-                        <i class="ri-arrow-down-line"></i>
+                    <a href="#about" class="scroll-indicator" data-aos="fade-up" data-aos-delay="900">
+                        <i class="ri-arrow-down-double-line"></i>
                     </a>
                 </div>
             </div>
