--- a/index.html
+++ b/index.html
@@ -27,13 +27,48 @@
     <!-- Remixicon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
 
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
     <!-- Preload Critical Resources -->
-    <link rel="preload" href="css/styles.css" as="style" />
-    <link rel="preload" href="js/main.js" as="script" />
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
+    <header class="nav-container">
+        <div class="logo">
+            <span class="logo-icon">t</span>
+            <h1>Design<span class="dot">.</span></h1>
+        </div>
+        <div class="menu-toggle" id="menuToggle" aria-label="Open Menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </header>
+
+    <div class="menu-overlay" id="menuOverlay">
+        <div class="menu-header">
+            <div class="logo">
+                <span class="logo-icon">t</span>
+                <h1>Design<span class="dot">.</span></h1>
+            </div>
+            <div class="close-btn" id="closeBtn">&times;</div>
+        </div>
+        <nav class="menu-links">
+            <a class="active" href="#"><span>→</span> Home</a>
+            <a href="#"><span>→</span> About</a>
+            <a href="#"><span>→</span> Services</a>
+            <a href="#"><span>→</span> Portfolio</a>
+            <a href="#"><span>→</span> Contact</a>
+        </nav>
+
+        <div class="menu-footer">
+            <label for="toggle-theme">Light/Dark Mode</label>
+            <input type="checkbox" id="toggle-theme" />
+        </div>
+    </div>
 
     <!-- Hero Section -->
     <section id="hero" class="hero-section">
