--- a/index.html
+++ b/index.html
@@ -36,7 +36,93 @@
 
 <body>
 
+    <!-- Skip to content button -->
+    <a href="#main" class="skip-to-content">Skip to main content</a>
 
+    <!-- Progress scroll bar -->
+    <div class="progress-bar" id="progressBar" aria-hidden="true"></div>
+
+    <!-- Main Section -->
+    <main id="main">
+
+        <!-- Hero Section -->
+        <section id="hero" class="hero-section">
+            <div class="container">
+                <div class="hero-content" data-aos="fade-up" data-aos-delay="200">
+                    <h1 class="hero-title">I build <span class="highlight-word">modern</span> websites that are<br>
+                        <span class="typing-text" id="typingText" data-typewriter aria-live="polite"
+                            aria-atomic="true"></span>
+                    </h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="400">
+                        Freelance web developer specializing in modern, accessible, and performance-optimized websites
+                        that convert visitors into customers.
+                    </p>
+
+                    <div class="hero-buttons" data-aos="fade-up" data-aos-delay="600">
+                        <a href="#portfolio" class="btn btn-primary">My portfolio</a>
+                        <a href="#contact" class="btn btn-secondary">
+                            Let's Talk!
+                        </a>
+                    </div>
+                    <!-- Scroll Down Indicator -->
+                    <a href="#about" class="scroll-indicator" data-aos="fade-up" data-aos-delay="900">
+                        <i class="ri-arrow-down-double-line"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <div class="section">
+            <div class="container">
+                <div class="content">
+                    <h2>Building <span class="highlight-word style-2">Amazing</span> Solutions</h2>
+                    <p>This section demonstrates the red highlight variant. The effect triggers when the element enters
+                        the viewport.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section">
+            <div class="container">
+                <div class="content">
+                    <h2>Crafting <span class="highlight-word style-3">Digital</span> Experiences</h2>
+                    <p>Each highlight can have different colors and styles to match your brand and create visual
+                        hierarchy.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section">
+            <div class="container">
+                <div class="content">
+                    <h2>Delivering <span class="highlight-word style-4">Outstanding</span> Results</h2>
+                    <p>The animation uses smooth cubic-bezier timing for a professional, polished feel.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section">
+            <div class="container">
+                <div class="content">
+                    <h2>Creating <span class="highlight-word style-5">Memorable</span> Brands</h2>
+                    <p>Multiple words can be highlighted in the same title, and each can have different animation
+                        delays.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section">
+            <div class="container">
+                <div class="content">
+                    <h2>Ready to <span class="highlight-word">Elevate</span> Your <span
+                            class="highlight-word style-2">Portfolio</span>?</h2>
+                    <p>This effect works great for portfolios, landing pages, and any content where you want to draw
+                        attention to key words.</p>
+                </div>
+            </div>
+        </div>
+
+    </main>
 
 
 
