Background/energy effect

--- a/index.html
+++ b/index.html
@@ -34,33 +34,10 @@
 </head>
 
 <body>
-    <!-- Cursor Spotlight Effect-->
-    
 
-    <!-- Hero Section -->
-    <section class="hero" id="hero">
-        <div class="container">
-            <div class="hero-content">
-                <div class="hero-text">
-                    <h1>Hey, I see you.<br>Let me help make<br>sure others do too!</h1>
-                    <p>Your business deserves to be seen. I create stunning, high-converting websites that help your
-                        brand stand out and attract the customers you deserve.</p>
-                    <div class="hero-actions">
-                        <a href="#portfolio" class="btn btn-primary">
-                            Let's Build Your Website
-                            <i class="ri-arrow-right-line"></i>
-                        </a>
-                        <a href="#about" class="btn btn-secondary">Learn More</a>
-                    </div>
-                </div>
-                <div class="hero-image">
-                    <div class="hero-placeholder">
-                        <i class="ri-image-line"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    <!-- Energy Container -->
+    <div class="energy-container" id="energyContainer"></div>
+
 
     <!-- JS Script -->
     <script src="js/main.js"></script>
