--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-    <!-- Header/Navigation -->
     <!-- Navigation Menu -->
     <header class="header" role="banner">
         <nav class="floating-nav" id="floatingNav">
@@ -76,7 +75,7 @@
     </header>
 
 
-    <script src="js/beams.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
