navigation menu updates

--- a/index.html
+++ b/index.html
@@ -61,20 +61,13 @@
                         <a href="#portfolio" class="mobile-nav-link">Portfolio</a>
                         <a href="#contact" class="mobile-nav-link">Contact</a>
                     </div>
-
-                    <div class="mobile-theme-section">
-                        <div class="mobile-theme-label">
-                            Light/Dark Mode
-                        </div>
-                        <input type="checkbox" id="dark-mode-toggle">
-                        <label for="dark-mode-toggle" class="toggle"></label>
-                    </div>
                 </div>
             </div>
         </nav>
     </header>
 
 
+    <!-- Scripts -->
     <script src="js/main.js"></script>
 </body>
 
