--- a/index.html
+++ b/index.html
@@ -74,18 +74,24 @@
         <div class="hero-container container">
             <!-- Hero Content -->
             <div class="hero-content">
-                <h1 class="hero-title">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <h1 class="hero-title">I build modern websites that are<br>
+                    <span class="typing-text" id="typingText" data-typewriter aria-live="polite"
+                        aria-atomic="true"></span>
                 </h1>
                 <p class="hero-subtitle">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, doloremque.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, doloremque.
+                    Freelance web developer specializing in modern, accessible, and performance-optimized websites
+                    that convert visitors into customers.
                 </p>
 
                 <div class="cta-buttons">
                     <a href="#" class="btn btn-primary">My work</a>
                     <a href="#" class="btn btn-secondary">Let's Talk!</a>
                 </div>
+
+                <!-- Scroll Down Indicator -->
+                <a href="#about" class="scroll-indicator" data-aos="fade-up" data-aos-delay="900">
+                    <i class="ri-arrow-down-double-line"></i>
+                </a>
             </div>
         </div>
     </section>
@@ -933,6 +939,8 @@
     <script src="js/projectModal.js"></script>
     <!-- Scroll To Top JS -->
     <script src="js/scrollTop.js"></script>
+    <!-- Typing Text JS -->
+    <script src="js/typingText.js"></script>pt
 </body>
 
 </html>
