--- a/index.html
+++ b/index.html
@@ -87,11 +87,6 @@
                     <a href="#" class="btn btn-primary">My work</a>
                     <a href="#" class="btn btn-secondary">Let's Talk!</a>
                 </div>
-
-                <!-- Scroll Down Indicator -->
-                <a href="#about" class="scroll-indicator" data-aos="fade-up" data-aos-delay="900">
-                    <i class="ri-arrow-down-double-line"></i>
-                </a>
             </div>
         </div>
     </section>
@@ -227,15 +222,14 @@
             <div class="portfolio-grid">
                 <div class="portfolio-card" onclick="openModal('modal1')">
                     <div class="portfolio-image">
-                        <i class="ri-restaurant-line"></i>
+                        <img src="assets/projects/businessCard_mockup.png" alt="">
                     </div>
                     <div class="portfolio-info">
-                        <h3>Bella Vista Restaurant</h3>
-                        <p>Modern restaurant website with online reservations and menu management</p>
+                        <h3>TNT Lawns</h3>
+                        <p>Business Card</p>
                         <div class="portfolio-tags">
-                            <span class="portfolio-tag">React</span>
-                            <span class="portfolio-tag">Next.js</span>
-                            <span class="portfolio-tag">Stripe</span>
+                            <span class="portfolio-tag">Adobe Illustrator</span>
+                            <span class="portfolio-tag"></span>
                         </div>
                     </div>
                 </div>
@@ -291,12 +285,12 @@
         <div class="modal-content">
             <div class="modal-header">
                 <div>
-                    <div class="section-badge">Restaurant</div>
-                    <h2>Bella Vista Restaurant</h2>
+                    <div class="section-badge">LawnCare</div>
+                    <h2>TNT Lawns</h2>
                     <div class="project-meta">
                         <div class="meta-item">
                             <i class="ri-calendar-line"></i>
-                            <span>6 weeks</span>
+                            <span>1-2 Days</span>
                         </div>
                         <div class="meta-item">
                             <i class="ri-user-line"></i>
